--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,142 +5,79 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
-
-    runs-on: windows-latest
-
+  build-publish:
+    strategy:
+      max-parallel: 4
+      matrix:
+        dotnet-version: [6.0.x]
+        os: [windows-latest]
+        os-version: ["any", "win-x64", "win-arm64", "linux-x64", "linux-arm64", "alpine-x64", "osx-x64", "osx-arm64"]
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
     - name: setup
       uses: actions/setup-dotnet@v2
-      env:
-          GITHUB_TOKEN: '${{ secrets.ACTIONS_TOKEN }}'
       with:
-        dotnet-version: 6.0.x
-
-    - name: Install dependencies 
-      run: |
-        iex ((new-object net.webclient).DownloadString('https://chocolatey.org/install.ps1'))
-        choco install 7zip -y
-    - name: restore
-      run: |
-        dotnet restore ./client/client.service
-        dotnet restore ./server/server.service
-        
-    - name: publish
+        dotnet-version: ${{ matrix.dotnetn-version }}
+    - name: publish any
+      if: matrix.os-version == 'any'
       run: |
         mkdir publish
         dotnet publish ./client/client.service -c release -f net6.0 -o ./publish/any/client
         dotnet publish ./server/server.service -c release -f net6.0 -o ./publish/any/server
-        dotnet publish ./client/client.service -c release -f net6.0 -o ./publish/win-x64-single/client	-r win-x64		--self-contained true  -p:DebugType=none -p:DebugSymbols=false  -p:PublishSingleFile=true -p:PublishTrimmed=true -p:IncludeNativeLibrariesForSelfExtract=true
-        dotnet publish ./server/server.service -c release -f net6.0 -o ./publish/win-x64-single/server	-r win-x64		--self-contained true  -p:DebugType=none -p:DebugSymbols=false  -p:PublishSingleFile=true -p:PublishTrimmed=true -p:IncludeNativeLibrariesForSelfExtract=true
-        dotnet publish ./client/client.service -c release -f net6.0 -o ./publish/win-arm64-single/client	-r win-arm64		--self-contained true  -p:DebugType=none -p:DebugSymbols=false  -p:PublishSingleFile=true -p:PublishTrimmed=true -p:IncludeNativeLibrariesForSelfExtract=true
-        dotnet publish ./server/server.service -c release -f net6.0 -o ./publish/win-arm64-single/server	-r win-arm64		--self-contained true  -p:DebugType=none -p:DebugSymbols=false  -p:PublishSingleFile=true -p:PublishTrimmed=true -p:IncludeNativeLibrariesForSelfExtract=true
-        dotnet publish ./client/client.service -c release -f net6.0 -o ./publish/linux-x64-single/client	-r linux-x64		--self-contained true  -p:DebugType=none -p:DebugSymbols=false  -p:PublishSingleFile=true -p:PublishTrimmed=true -p:IncludeNativeLibrariesForSelfExtract=true
-        dotnet publish ./server/server.service -c release -f net6.0 -o ./publish/linux-x64-single/server	-r linux-x64		--self-contained true  -p:DebugType=none -p:DebugSymbols=false  -p:PublishSingleFile=true -p:PublishTrimmed=true -p:IncludeNativeLibrariesForSelfExtract=true
-        dotnet publish ./client/client.service -c release -f net6.0 -o ./publish/linux-arm64-single/client	-r linux-arm64		--self-contained true  -p:DebugType=none -p:DebugSymbols=false  -p:PublishSingleFile=true -p:PublishTrimmed=true -p:IncludeNativeLibrariesForSelfExtract=true
-        dotnet publish ./server/server.service -c release -f net6.0 -o ./publish/linux-arm64-single/server	-r linux-arm64		--self-contained true  -p:DebugType=none -p:DebugSymbols=false  -p:PublishSingleFile=true -p:PublishTrimmed=true -p:IncludeNativeLibrariesForSelfExtract=true
-        dotnet publish ./client/client.service -c release -f net6.0 -o ./publish/osx-x64-single/client	-r osx-x64		--self-contained true  -p:DebugType=none -p:DebugSymbols=false  -p:PublishSingleFile=true -p:PublishTrimmed=true -p:IncludeNativeLibrariesForSelfExtract=true
-        dotnet publish ./server/server.service -c release -f net6.0 -o ./publish/osx-x64-single/server	-r osx-x64		--self-contained true  -p:DebugType=none -p:DebugSymbols=false  -p:PublishSingleFile=true -p:PublishTrimmed=true -p:IncludeNativeLibrariesForSelfExtract=true
-        dotnet publish ./client/client.service -c release -f net6.0 -o ./publish/osx-arm64-single/client	-r osx-arm64		--self-contained true  -p:DebugType=none -p:DebugSymbols=false  -p:PublishSingleFile=true -p:PublishTrimmed=true -p:IncludeNativeLibrariesForSelfExtract=true
-        dotnet publish ./server/server.service -c release -f net6.0 -o ./publish/osx-arm64-single/server	-r osx-arm64		--self-contained true  -p:DebugType=none -p:DebugSymbols=false  -p:PublishSingleFile=true -p:PublishTrimmed=true -p:IncludeNativeLibrariesForSelfExtract=true
-        7z a -tzip any.zip ./publish/any
-        7z a -tzip win-x64-single.zip ./publish/win-x64-single
-        7z a -tzip win-arm64-single.zip ./publish/win-arm64-single
-        7z a -tzip linux-x64-single.zip ./publish/linux-x64-single
-        7z a -tzip linux-arm64-single.zip ./publish/linux-arm64-single
-        7z a -tzip osx-x64-single.zip ./publish/osx-x64-single
-        7z a -tzip osx-arm64-single.zip ./publish/osx-arm64-single
+        7z a -tzip publish/any.zip publish/any
+    - name: publish other
+      if: matrix.os-version != 'any'
+      run: |    
+        mkdir publish
+        dotnet publish ./client/client.service -c release -f net6.0 -o ./publish/${{ matrix.os-version }}-single/client	-r ${{ matrix.os-version }}  -p:DebugType=none -p:DebugSymbols=false  -p:PublishSingleFile=true -p:PublishTrimmed=true -p:IncludeNativeLibrariesForSelfExtract=true
+        dotnet publish ./server/server.service -c release -f net6.0 -o ./publish/${{ matrix.os-version }}-single/server	-r ${{ matrix.os-version }}  -p:DebugType=none -p:DebugSymbols=false  -p:PublishSingleFile=true -p:PublishTrimmed=true -p:IncludeNativeLibrariesForSelfExtract=true
+        7z a -tzip publish/${{ matrix.os-version }}-single.zip publish/${{ matrix.os-version }}-single
+    - name: Upload item
+      uses: actions/upload-artifact@v3
+      with:
+        name: bin-${{ matrix.os-version }}
+        path: publish
     
-    - name: get current date
-      id: date
-      run: echo "::set-output name=today::$(date +'%Y-%m-%d')"
-    
-    - name: create release
-      id: create_release
-      uses: actions/create-release@master
-      env:
-          GITHUB_TOKEN: '${{ secrets.ACTIONS_TOKEN }}'
+  release:
+    name: Release item
+    needs: 
+    - build-publish
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/download-artifact@v2
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ steps.date.outputs.today }}
-        draft: false
-        prerelease: false
-        
-    - name: upload any
-      id: upload-any
-      uses: actions/upload-release-asset@master
-      env:
-          GITHUB_TOKEN: '${{ secrets.ACTIONS_TOKEN }}'
+        name: bin-any
+        path: bin-any
+    - uses: actions/download-artifact@v2
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./any.zip
-        asset_name: any.zip
-        asset_content_type: application/x-zip
-    
-    - name: upload win x64 single
-      id: upload-win-x64
-      uses: actions/upload-release-asset@master
-      env:
-          GITHUB_TOKEN: '${{ secrets.ACTIONS_TOKEN }}'
+        name: bin-win-x64
+        path: bin-win-x64
+    - uses: actions/download-artifact@v2
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./win-x64-single.zip
-        asset_name: win-x64-single.zip
-        asset_content_type: application/x-zip
-    
-    - name: upload win arm64 single
-      id: upload-win-arm64
-      uses: actions/upload-release-asset@master
-      env:
-          GITHUB_TOKEN: '${{ secrets.ACTIONS_TOKEN }}'
+        name: bin-win-arm64
+        path: bin-win-arm64
+    - uses: actions/download-artifact@v2
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./win-arm64-single.zip
-        asset_name: win-arm64-single.zip
-        asset_content_type: application/x-zip
-
-    - name: upload linux x64 single
-      id: upload-linux-x64
-      uses: actions/upload-release-asset@master
-      env:
-          GITHUB_TOKEN: '${{ secrets.ACTIONS_TOKEN }}'
+        name: bin-linux-x64
+        path: bin-linux-x64
+    - uses: actions/download-artifact@v2
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./linux-x64-single.zip
-        asset_name: linux-x64-single.zip
-        asset_content_type: application/x-zip
-    
-    - name: upload linux arm64 single
-      id: upload-linux-arm64
-      uses: actions/upload-release-asset@master
-      env:
-          GITHUB_TOKEN: '${{ secrets.ACTIONS_TOKEN }}'
+        name: bin-linux-arm64
+        path: bin-linux-arm64
+    - uses: actions/download-artifact@v2
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./linux-arm64-single.zip
-        asset_name: linux-arm64-single.zip
-        asset_content_type: application/x-zip
-    
-    - name: upload osx x64 single
-      id: upload-osx-x64
-      uses: actions/upload-release-asset@master
-      env:
-          GITHUB_TOKEN: '${{ secrets.ACTIONS_TOKEN }}'
+        name: bin-alpine-x64
+        path: bin-alpine-x64
+    - uses: actions/download-artifact@v2
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./osx-x64-single.zip
-        asset_name: osx-x64-single.zip
-        asset_content_type: application/x-zip
-    
-    - name: upload osx arm64 single
-      id: upload-osx-arm64
-      uses: actions/upload-release-asset@master
-      env:
-          GITHUB_TOKEN: '${{ secrets.ACTIONS_TOKEN }}'
+        name: bin-osx-x64
+        path: bin-osx-x64
+    - uses: actions/download-artifact@v2
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./osx-arm64-single.zip
-        asset_name: osx-arm64-single.zip
-        asset_content_type: application/x-zip
-        
+        name: bin-osx-arm64
+        path: bin-osx-arm64
+    - uses: softprops/action-gh-release@v1
+      with:
+        draft: true
+        files: bin-*/*
