--- a/.github/workflows/dockerbuild.yml
+++ b/.github/workflows/dockerbuild.yml
@@ -49,6 +49,8 @@ jobs:
           - os-version: linux-arm
             name-dir: arm
             name-platform: 'linux/arm/v7'
+    needs: 
+    - build-publish
     runs-on: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v3
