--- a/.github/workflows/dockerbuild.yml
+++ b/.github/workflows/dockerbuild.yml
@@ -26,7 +26,7 @@ jobs:
         mkdir publish
         dotnet publish ./client/client.service -c release -f net6.0 -o ./publish/${{ matrix.os-version }}-single/client	-r ${{ matrix.os-version }}  -p:DebugType=none -p:DebugSymbols=false  -p:PublishSingleFile=true -p:PublishTrimmed=true -p:IncludeNativeLibrariesForSelfExtract=true
         dotnet publish ./server/server.service -c release -f net6.0 -o ./publish/${{ matrix.os-version }}-single/server	-r ${{ matrix.os-version }}  -p:DebugType=none -p:DebugSymbols=false  -p:PublishSingleFile=true -p:PublishTrimmed=true -p:IncludeNativeLibrariesForSelfExtract=true
-        7z a -tzip publish/${{ matrix.os-version }}-single.zip publish/${{ matrix.os-version }}-single
+        7z a -tzip publish/single.zip publish/${{ matrix.os-version }}-single/*
     - name: Upload item
       uses: actions/upload-artifact@v3
       with:
@@ -57,7 +57,7 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: bin-${{ matrix.os-version }}
-          path: bin-${{ matrix.name-dir }}
+          path: docker
       - name: publish
         run: |    
           ls
