--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -14,7 +14,7 @@ ENV PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin \
 
 WORKDIR ${P2P_DIR}
 
-COPY /home/runner/work/p2p-tunnel/p2p-tunnel/ /root/
+COPY /docker/single.zip /p2p/single.zip
 
 RUN set -x \
     && sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories \
@@ -30,6 +30,7 @@ RUN set -x \
     && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
     && echo "Asia/Shanghai" > /etc/timezone \
     && npm install -g pm2 \
+    && unzip /p2p/single.zip \
     && git clone -b ${P2P_BRANCH} ${P2P_URL} ${P2P_DIR}/version 
 
 ENTRYPOINT ["./version/docker/docker-entrypoint.sh"]
