--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,7 +27,7 @@ jobs:
         mkdir publish
         dotnet publish ./client/client.service -c release -f net6.0 -o ./publish/any/client
         dotnet publish ./server/server.service -c release -f net6.0 -o ./publish/any/server
-        7z a -tzip publish/any.zip publish/any
+        7z a -tzip publish/any.zip publish/any/*
     - name: publish other
       if: matrix.os-version != 'any'
       run: |    
@@ -36,7 +36,7 @@ jobs:
         mkdir publish
         dotnet publish ./client/client.service -c release -f net6.0 -o ./publish/${{ matrix.os-version }}-single/client	-r ${{ matrix.os-version }}  -p:DebugType=none -p:DebugSymbols=false  -p:PublishSingleFile=true -p:PublishTrimmed=true -p:IncludeNativeLibrariesForSelfExtract=true
         dotnet publish ./server/server.service -c release -f net6.0 -o ./publish/${{ matrix.os-version }}-single/server	-r ${{ matrix.os-version }}  -p:DebugType=none -p:DebugSymbols=false  -p:PublishSingleFile=true -p:PublishTrimmed=true -p:IncludeNativeLibrariesForSelfExtract=true
-        7z a -tzip publish/${{ matrix.os-version }}-single.zip publish/${{ matrix.os-version }}-single
+        7z a -tzip publish/${{ matrix.os-version }}-single.zip publish/${{ matrix.os-version }}-single/*
     - name: Upload item
       uses: actions/upload-artifact@v3
       with:
