--- a/.github/workflows/dockerbuild.yml
+++ b/.github/workflows/dockerbuild.yml
@@ -61,7 +61,7 @@ jobs:
           publish: true
           imageName: k1483162508/p2ptunnel
           dockerFile: docker/Dockerfile
-          platform: linux-arm64, linux/arm64, linux/arm/v7
+          platform: linux/amd64, linux/arm64, linux/arm/v7
           tag: latest
           dockerUser: ${{ secrets.DOCKER_USERNAME }}
           dockerPassword: ${{ secrets.DOCKER_PASSWORD }}
