--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -31,14 +31,12 @@ RUN set -x \
     && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
     && echo "Asia/Shanghai" > /etc/timezone \
     && npm install -g pm2 \
-    if [ `uname -m` = 'x86_64' ]; \
-    then \
-      mv /p2p/bin-linux-musl-x64-single.zip /p2p/single.zip \
-    elif [ `uname -m` = 'aarch64' ]; \
-    then \
-      mv /p2p/bin-linux-arm64-single.zip /p2p/single.zip \
+    if [ `uname -m` = 'x86_64' ]; then \
+      mv /p2p/bin-linux-musl-x64-single.zip /p2p/single.zip; \
+    elif [ `uname -m` = 'aarch64' ]; then \
+      mv /p2p/bin-linux-arm64-single.zip /p2p/single.zip; \
     else \
-      mv /p2p/bin-linux-arm-single.zip /p2p/single.zip \
+      mv /p2p/bin-linux-arm-single.zip /p2p/single.zip; \
     fi \
     && unzip /p2p/single.zip \
     && rm -rf /p2p/single.zip \
