--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -31,13 +31,9 @@ RUN set -x \
     && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
     && echo "Asia/Shanghai" > /etc/timezone \
     && npm install -g pm2 \
-    if [ `uname -m` = 'x86_64' ]; then \
-      mv /p2p/bin-linux-musl-x64-single.zip /p2p/single.zip; \
-    elif [ `uname -m` = 'aarch64' ]; then \
-      mv /p2p/bin-linux-arm64-single.zip /p2p/single.zip; \
-    else \
-      mv /p2p/bin-linux-arm-single.zip /p2p/single.zip; \
-    fi \
+    && if [ `uname -m` = 'x86_64' ]; then mv /p2p/bin-linux-musl-x64-single.zip /p2p/single.zip; else echo "0"; fi \
+    && if [ `uname -m` = 'aarch64' ]; then mv /p2p/bin-linux-arm64-single.zip /p2p/single.zip; else echo "0"; fi \
+    && if [ `uname -m` = 'armv7l' ]; then mv /p2p/bin-linux-arm-single.zip /p2p/single.zip; else echo "0"; fi \
     && unzip /p2p/single.zip \
     && rm -rf /p2p/single.zip \
     && git clone -b ${P2P_BRANCH} ${P2P_URL} ${P2P_DIR}/version \
