--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,7 +27,7 @@ jobs:
         mkdir publish
         dotnet publish ./client/client.service -c release -f net6.0 -o ./publish/any/client
         dotnet publish ./server/server.service -c release -f net6.0 -o ./publish/any/server
-        cd publish/any-single
+        cd publish/any
         7z a -tzip publish/any.zip ./*
     - name: publish other
       if: matrix.os-version != 'any'
