--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,7 +28,7 @@ jobs:
         dotnet publish ./client/client.service -c release -f net6.0 -o ./publish/any-single/client
         dotnet publish ./server/server.service -c release -f net6.0 -o ./publish/any-single/server
         cd publish/any-single
-        7z a -tzip publish/any.zip ./*
+        7z a -tzip publish/any-single/any.zip ./*
     - name: publish other
       if: matrix.os-version != 'any'
       run: |    
@@ -38,7 +38,7 @@ jobs:
         dotnet publish ./client/client.service -c release -f net6.0 -o ./publish/${{ matrix.os-version }}-single/client	-r ${{ matrix.os-version }} --self-contained true -p:DebugType=none -p:DebugSymbols=false  -p:PublishSingleFile=true -p:PublishTrimmed=true -p:IncludeNativeLibrariesForSelfExtract=true
         dotnet publish ./server/server.service -c release -f net6.0 -o ./publish/${{ matrix.os-version }}-single/server	-r ${{ matrix.os-version }} --self-contained true -p:DebugType=none -p:DebugSymbols=false  -p:PublishSingleFile=true -p:PublishTrimmed=true -p:IncludeNativeLibrariesForSelfExtract=true
         cd publish/${{ matrix.os-version }}-single
-        7z a -tzip publish/${{ matrix.os-version }}-single.zip ./*
+        7z a -tzip publish/${{ matrix.os-version }}-single/${{ matrix.os-version }}-single.zip ./*
     - name: Upload item
       uses: actions/upload-artifact@v3
       with:
