--- a/.github/workflows/dockerbuild.yml
+++ b/.github/workflows/dockerbuild.yml
@@ -1,8 +1,10 @@
 name: "P2P-TUNNEL-DOCKER"
 on:
-  push:
-    branches:
-      - master
+    push:
+        branches:
+            - master
+    schedule:
+        - cron: '5 16 * * *'
   
 jobs:
   build-publish:
