--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,8 +1,11 @@
 name: Publich
 
 on:
-  push:
-    branches: [ "master" ]
+    push:
+        branches:
+            - master
+    schedule:
+        - cron: '5 16 * * *'
 
 jobs:
   build-publish:
